<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/logo_green_flagx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextStyleSplashActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/museosans_500"
        android:text="@string/txt_view_splash_graph1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_splash" />

    <ImageView
        android:id="@+id/img_chk1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/check_mark"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/text_view_splash_ch1"
        style="@style/TextStyleSplashActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/txt_view_splash_check1"
        app:layout_constraintBottom_toBottomOf="@+id/img_chk1"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@id/img_chk1" />

    <ImageView
        android:id="@+id/img_chk2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/check_mark"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/img_chk1" />

    <TextView
        android:id="@+id/text_view_splash_ch2"
        style="@style/TextStyleSplashActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/txt_view_splash_check2"
        app:layout_constraintBottom_toBottomOf="@+id/img_chk2"
        app:layout_constraintEnd_toEndOf="@+id/text_view_splash_ch1"
        app:layout_constraintStart_toEndOf="@id/img_chk2" />

    <ImageView
        android:id="@+id/img_chk3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/check_mark"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/img_chk2" />

    <TextView
        android:id="@+id/text_view_splash_ch3"
        style="@style/TextStyleSplashActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/txt_view_splash_check3"
        app:layout_constraintBottom_toBottomOf="@+id/img_chk3"
        app:layout_constraintEnd_toEndOf="@+id/text_view_splash_ch2"
        app:layout_constraintStart_toEndOf="@id/img_chk3" />

    <Button
        android:id="@+id/btn_splash_open"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/btn_view_splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>